# docs/swagger.json
@@ -9,7 +9,7 @@
     "basePath": "/compiler-api/v1",
     "paths": {
         "/private/run": {
-            "get": {
+            "post": {
                 "description": "Runs user codes.",
                 "consumes": [
                     "application/json"
@@ -21,6 +21,17 @@
                     "Run"
                 ],
                 "summary": "Runs codes.",
+                "parameters": [
+                    {
+                        "description": "Chapter Quest",
+                        "name": "quest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.QuestDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -33,6 +44,65 @@
         }
     },
     "definitions": {
+        "dto.QuestChapter": {
+            "type": "object",
+            "properties": {
+                "checkTmp": {
+                    "type": "string"
+                },
+                "dockerTmp": {
+                    "type": "string"
+                },
+                "frontendTmp": {
+                    "type": "string"
+                },
+                "funcname": {
+                    "type": "string"
+                },
+                "userCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.QuestDTO": {
+            "type": "object",
+            "properties": {
+                "chapter": {
+                    "$ref": "#/definitions/dto.QuestChapter"
+                },
+                "programmingLanguage": {
+                    "$ref": "#/definitions/dto.QuestProgrammingLang"
+                },
+                "tests": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.QuestTest"
+                    }
+                }
+            }
+        },
+        "dto.QuestProgrammingLang": {
+            "type": "object",
+            "properties": {
+                "fileExtention": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.QuestTest": {
+            "type": "object",
+            "properties": {
+                "input": {
+                    "type": "string"
+                },
+                "output": {
+                    "type": "string"
+                }
+            }
+        },
         "response.BaseResponse": {
             "type": "object",
             "properties": {
